--- a/projects/29-amazona/template/index.html
+++ b/projects/29-amazona/template/index.html
@@ -31,6 +31,62 @@
                             </div>
                             <div class="product-brand">Nike</div>
                             <div class="product-price">$60</div>
+                            <div class="product-rating">4.5 Stars (10 reviews)</div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="product">
+                            <img class="product-image" src="images/d1.jpg" alt="product">
+                            <div class="product-name">
+                                <a href="product.html">Slim Shirt</a>
+                            </div>
+                            <div class="product-brand">Nike</div>
+                            <div class="product-price">$60</div>
+                            <div class="product-rating">4.5 Stars (10 reviews)</div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="product">
+                            <img class="product-image" src="images/d1.jpg" alt="product">
+                            <div class="product-name">
+                                <a href="product.html">Slim Shirt</a>
+                            </div>
+                            <div class="product-brand">Nike</div>
+                            <div class="product-price">$60</div>
+                            <div class="product-rating">4.5 Stars (10 reviews)</div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="product">
+                            <img class="product-image" src="images/d1.jpg" alt="product">
+                            <div class="product-name">
+                                <a href="product.html">Slim Shirt</a>
+                            </div>
+                            <div class="product-brand">Nike</div>
+                            <div class="product-price">$60</div>
+                            <div class="product-rating">4.5 Stars (10 reviews)</div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="product">
+                            <img class="product-image" src="images/d1.jpg" alt="product">
+                            <div class="product-name">
+                                <a href="product.html">Slim Shirt</a>
+                            </div>
+                            <div class="product-brand">Nike</div>
+                            <div class="product-price">$60</div>
+                            <div class="product-rating">4.5 Stars (10 reviews)</div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="product">
+                            <img class="product-image" src="images/d1.jpg" alt="product">
+                            <div class="product-name">
+                                <a href="product.html">Slim Shirt</a>
+                            </div>
+                            <div class="product-brand">Nike</div>
+                            <div class="product-price">$60</div>
+                            <div class="product-rating">4.5 Stars (10 reviews)</div>
                         </div>
                     </li>
                 </ul>
