create the sidebar menu that opens onclick

--- a/projects/29-amazona/template/index.html
+++ b/projects/29-amazona/template/index.html
@@ -13,6 +13,9 @@
     <div class="grid-container">
         <header class="header">
             <div class="brand">
+                <button onclick="openMenu()">
+                    &#9776;
+                </button>
                 <a href="index.html">amazona</a>
             </div>
             <div class="header-links">
@@ -20,6 +23,19 @@
                 <a href="signin.html">Sign in</a>
             </div>
         </header>
+        <!-- SIDEBAR -------------------------------------------------->
+        <aside class="sidebar">
+            <h3>Shopping Categories</h3>
+            <ul>
+                <li>
+                    <a href="index.html">Pants</a>
+                </li>
+                <li>
+                    <a href="index.html">Shirts</a>
+                </li>
+            </ul>
+        </aside>
+        <!-- MAIN ----------------------------------------------------->
         <main class="main">
             <div class="content">
                 <ul class="products">
