--- a/projects/29-amazona/template/style.css
+++ b/projects/29-amazona/template/style.css
@@ -124,3 +124,26 @@ a:hover {
 .product-rating {
     margin-bottom: 1rem;
 }
+
+
+/* Sidebar ------------------- */
+
+.brand button {
+    font-size: 3rem;
+    padding: .5rem;
+    border: none;
+    background: none;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+.sidebar {
+    position: fixed;
+    transform: translateX(-30rem);
+    width: 30rem;
+    background-color: #f0f0f0;
+}
+
+.sidebar.open {
+    transform: translateX(0);
+}
