--- a/projects/29-amazona/template/style.css
+++ b/projects/29-amazona/template/style.css
@@ -142,6 +142,7 @@ a:hover {
     transform: translateX(-30rem);
     width: 30rem;
     background-color: #f0f0f0;
+    height: 100%;
 }
 
 .sidebar.open {
