--- a/projects/29-amazona/template/index.html
+++ b/projects/29-amazona/template/index.html
@@ -26,7 +26,7 @@
         <!-- SIDEBAR -------------------------------------------------->
         <aside class="sidebar">
             <h3>Shopping Categories</h3>
-            <button onclick="closeMenu()">X</button>
+            <button class="sidebar-close-btn" onclick="closeMenu()">X</button>
             <ul>
                 <li>
                     <a href="index.html">Pants</a>
