change feedback max-width to 73rem

--- a/projects/28-jsProjects/11-toDoList/style.css
+++ b/projects/28-jsProjects/11-toDoList/style.css
@@ -83,7 +83,7 @@ html {
 .feedback {
   color: white;
   margin: 0 auto;
-  max-width: 100%;
+  max-width: 73rem;
   height: 5rem;
   font-size: 1.5rem;
   display: none;
