--- a/projects/29-restaurant/css/header.css
+++ b/projects/29-restaurant/css/header.css
@@ -68,26 +68,49 @@ header{
   color: #fff;
 }
 
+/* Promo ---------------- */
 .promo{
   display: flex;
   flex-direction: column;
+  /* border: 1px solid white; */
+  padding-bottom: 9rem;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  margin: 0 auto;
+  width: 77rem;
   height: 65rem;
   color: white;
 }
 
+.promo h1{
+  font-size: 8rem;
+  font-weight:lighter;
+}
+
+.promo .divider{
+  margin: 3rem;
+}
+
 .promo-btns{
-  display: flex;
+  display: flex !important;
 }
 
 .btn{
   cursor: pointer;
-  padding: 0 3rem;
-  height: 5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
   font-size: 1.8rem;
+  width: 23rem;
+  height: 6rem;
+  color: white;
+  margin: 1.5rem;
+}
+
+.btn-black{
+  background: rgba(0, 0, 0, 0.5);
+  border: 1px solid black;
+}
+
+.btn-white{
+  background: rgba(255, 255, 255, 0.2);
+    border: 1px solid white;
 }
