--- a/projects/29-restaurant/css/menu.css
+++ b/projects/29-restaurant/css/menu.css
@@ -5,7 +5,6 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  text-align: center;
 }
 
 .menu-background{
@@ -20,34 +19,53 @@
 .menu-groups{
   display: flex;
   width: 103rem;
-  /* align-items: center; */
+  align-items: center;
   justify-content: space-between;
-  border: 1px solid blue;
-  height: 80rem;
+  /* height: 80rem; */
+}
+
+.salads, .dishes{
+  margin-top: 5rem;
+}
+
+.menu-header{
+  text-align: center;
+}
+
+.menu_item{
+  margin-bottom: 1rem;
+  padding:1rem;
 }
 
 .menu-left, .menu-right{
-  border: 1px solid gray;
   width: 43rem;
 }
 
 .food-price{
   display: flex;
   justify-content: space-between;
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
   border-bottom: 1px solid #dab33e;
   color:#dab33e;
 }
 
 .special{
+  margin-top: -1.5rem;
   display: flex;
   justify-content:flex-end;
-  border: 1px solid red;
 }
 
 .special p{
-  background:#dab33e;
+  color: white;
+  padding:.5rem 1.5rem;
+  background:#d5ba6b;
 }
 
 .description{
   color: #4c4c4c;
+}
+
+.yellow-border{
+  border: 1px solid #dab33e;
 }
