feat: make footer icons spin on hover

--- a/projects/29-restaurant/style/footer.css
+++ b/projects/29-restaurant/style/footer.css
@@ -2,6 +2,41 @@
   /* position: fixed;
   bottom: 0; */
   background: var(--darkGray);
-  width: 160rem;
-  height: 14rem;
+  padding: 5rem 0;
+}
+
+.footer_content{
+  width: 110rem;
+  color: white;
+}
+
+.footer_heading{color: white;}
+
+.aboutus{width: 37rem;}
+
+.footer_icons{
+  margin-top: 4rem;
+  width: 12rem;
+}
+
+.footer_icons>*{
+  color: white;
+  transition: transform;
+}
+
+.footer_icons a:hover{
+  /* color: var(--lightYellow); */
+  animation-name: rotate; 
+  animation-duration: 2s; 
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes rotate {
+  from {transform: rotate(0deg);}
+  to {transform: rotate(360deg);}
+}
+
+.footer_content nav:last-child{
+  width: 10rem;
 }
